--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,21 +1,20 @@
 FROM rust:bookworm
 
-ARG USERNAME=ownia
+ARG USERNAME=tim
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-
 
 WORKDIR /usr/src/myapp
 COPY . .
 
-RUN apt-get update
-RUN apt-get install \
-    vim \
-    sudo \
-    zsh \
-    build-essential \
-    shellcheck \
-    -y
+# RUN apt-get update
+# RUN apt-get install \
+#     vim \
+#     sudo \
+#     zsh \
+#     build-essential \
+#     shellcheck \
+#     -y
 
 EXPOSE 4369 15672
 
